force-app/main/default/objects/LT_Loss_Claim__c/LT_Loss_Claim__c.object-meta.xml
<CustomObject>
    <description>Extravio - LogiTrack Operations 360.</description>
    <label>Extravio</label>
    <nameField>
        <displayFormat>EXT-{000000}</displayFormat>
        <label>Codigo do Extravio</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Extravios</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>