force-app/main/default/objects/LT_Loss_Claim__c/fields/LT_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>LT_Approval_Date__c</fullName>
    <description>Data da aprovacao do ressarcimento.</description>
    <label>Data de Aprovacao</label>
    <type>Date</type>
</CustomField>