force-app/main/default/objects/LT_Loss_Claim__c/fields/LT_Approved_By__c.field-meta.xml
<CustomField>
    <fullName>LT_Approved_By__c</fullName>
    <description>Usuario que aprovou o ressarcimento.</description>
    <label>Aprovado Por</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Extravios Aprovados</relationshipLabel>
    <relationshipName>LT_Approved_Loss_Claims</relationshipName>
    <type>Lookup</type>
</CustomField>