force-app/main/default/objects/LT_Loss_Claim__c/fields/LT_Batch_Reference__c.field-meta.xml
<CustomField>
    <fullName>LT_Batch_Reference__c</fullName>
    <description>Identificador do lote quando o extravio foi processado em massa.</description>
    <label>Lote de Extravio</label>
    <type>Text</type>
    <length>30</length>
</CustomField>