force-app/main/default/objects/LT_Loss_Claim__c/fields/LT_Case__c.field-meta.xml
<CustomField>
    <fullName>LT_Case__c</fullName>
    <description>Chamado SAC que originou o extravio.</description>
    <label>Chamado de Origem</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Extravios</relationshipLabel>
    <relationshipName>LT_Loss_Claims</relationshipName>
    <type>Lookup</type>
</CustomField>