force-app/main/default/objects/LT_Loss_Claim__c/fields/LT_Days_To_Resolve__c.field-meta.xml
<CustomField>
    <fullName>LT_Days_To_Resolve__c</fullName>
    <description>Dias entre a deteccao e o ressarcimento (ou hoje, se em aberto).</description>
    <label>Dias ate Resolucao</label>
    <formula>IF(ISBLANK(LT_Detected_Date__c), NULL, IF(NOT(ISBLANK(LT_Reimbursement_Date__c)), LT_Reimbursement_Date__c - LT_Detected_Date__c, TODAY() - LT_Detected_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>