force-app/main/default/objects/LT_Loss_Claim__c/fields/LT_Detected_Date__c.field-meta.xml
<CustomField>
    <fullName>LT_Detected_Date__c</fullName>
    <description>Data em que o extravio foi registrado.</description>
    <label>Data de Deteccao</label>
    <required>true</required>
    <type>Date</type>
</CustomField>