force-app/main/default/objects/LT_Loss_Claim__c/fields/LT_Driver_Charge_Value__c.field-meta.xml
<CustomField>
    <fullName>LT_Driver_Charge_Value__c</fullName>
    <description>Valor a descontar do motorista quando ele e o responsavel.</description>
    <label>Valor Descontado do Motorista</label>
    <type>Currency</type>
    <precision>12</precision>
    <scale>2</scale>
</CustomField>