force-app/main/default/objects/LT_Loss_Claim__c/fields/LT_Generates_Penalty__c.field-meta.xml
<CustomField>
    <fullName>LT_Generates_Penalty__c</fullName>
    <description>Verdadeiro quando o motorista e o responsavel e ha valor a descontar dele.</description>
    <label>Gera Penalizacao</label>
    <formula>AND(ISPICKVAL(LT_Responsibility__c, "Motorista"), BLANKVALUE(LT_Driver_Charge_Value__c, 0) &gt; 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <type>Checkbox</type>
</CustomField>