force-app/main/default/objects/LT_Loss_Claim__c/fields/LT_Loss_Reason__c.field-meta.xml
<CustomField>
    <fullName>LT_Loss_Reason__c</fullName>
    <description>Motivo pelo qual a remessa foi considerada extraviada.</description>
    <label>Motivo do Extravio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PNR - Paguei Nao Recebi</fullName>
            </value>
            <value>
                <fullName>Assinado Nao Recebido</fullName>
            </value>
            <value>
                <fullName>Avaria na Entrega</fullName>
            </value>
            <value>
                <fullName>Avaria em Transporte</fullName>
            </value>
            <value>
                <fullName>Retido +10 dias</fullName>
            </value>
            <value>
                <fullName>Sem Movimentacao +10 dias</fullName>
            </value>
            <value>
                <fullName>Roubo / Furto de Carga</fullName>
            </value>
            <value>
                <fullName>Sinistro (Acidente)</fullName>
            </value>
            <value>
                <fullName>Endereco Inexistente</fullName>
            </value>
            <value>
                <fullName>Outro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>