force-app/main/default/objects/LT_Loss_Claim__c/fields/LT_Loss_Sub_Reason__c.field-meta.xml
<CustomField>
    <fullName>LT_Loss_Sub_Reason__c</fullName>
    <description>Sub-motivo do extravio, dependente do Motivo do Extravio.</description>
    <label>Sub-motivo do Extravio</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>LT_Loss_Reason__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Acidente de Veiculo</fullName>
            </value>
            <value>
                <fullName>Alagamento</fullName>
            </value>
            <value>
                <fullName>Assinatura de Terceiro</fullName>
            </value>
            <value>
                <fullName>CEP Invalido</fullName>
            </value>
            <value>
                <fullName>Carga Mal Acomodada</fullName>
            </value>
            <value>
                <fullName>Cliente Mudou</fullName>
            </value>
            <value>
                <fullName>Colisao</fullName>
            </value>
            <value>
                <fullName>Desvio Interno</fullName>
            </value>
            <value>
                <fullName>Embalagem Insuficiente</fullName>
            </value>
            <value>
                <fullName>Endereco Nao Localizado</fullName>
            </value>
            <value>
                <fullName>Entrega em Endereco Errado</fullName>
            </value>
            <value>
                <fullName>Erro de Bipagem</fullName>
            </value>
            <value>
                <fullName>Falha na Comprovacao</fullName>
            </value>
            <value>
                <fullName>Fraude do Destinatario</fullName>
            </value>
            <value>
                <fullName>Furto no Galpao</fullName>
            </value>
            <value>
                <fullName>Incendio</fullName>
            </value>
            <value>
                <fullName>Manuseio do Motorista</fullName>
            </value>
            <value>
                <fullName>Numero Inexistente</fullName>
            </value>
            <value>
                <fullName>Outro</fullName>
            </value>
            <value>
                <fullName>Perda no Galpao</fullName>
            </value>
            <value>
                <fullName>Portaria / Recepcao</fullName>
            </value>
            <value>
                <fullName>Produto Fragil</fullName>
            </value>
            <value>
                <fullName>Recusa do Cliente</fullName>
            </value>
            <value>
                <fullName>Roubo em Rota</fullName>
            </value>
            <value>
                <fullName>Sem Rota Atribuida</fullName>
            </value>
            <value>
                <fullName>Sem Tentativa de Contato</fullName>
            </value>
            <value>
                <fullName>Umidade / Chuva</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>