force-app/main/default/objects/LT_Loss_Claim__c/fields/LT_Net_Company_Cost__c.field-meta.xml
<CustomField>
    <fullName>LT_Net_Company_Cost__c</fullName>
    <description>Valor ressarcido menos o que foi recuperado do motorista.</description>
    <label>Custo Liquido da Empresa</label>
    <formula>BLANKVALUE(LT_Reimbursement_Value__c, 0) - BLANKVALUE(LT_Driver_Charge_Value__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>