force-app/main/default/objects/LT_Loss_Claim__c/fields/LT_Operational_Incident__c.field-meta.xml
<CustomField>
    <fullName>LT_Operational_Incident__c</fullName>
    <description>Ocorrencia operacional que originou o extravio.</description>
    <label>Ocorrencia de Origem</label>
    <referenceTo>LT_Operational_Incident__c</referenceTo>
    <relationshipLabel>Extravios</relationshipLabel>
    <relationshipName>LT_Loss_Claims</relationshipName>
    <type>Lookup</type>
</CustomField>