force-app/main/default/objects/LT_Loss_Claim__c/fields/LT_Reimbursement_Date__c.field-meta.xml
<CustomField>
    <fullName>LT_Reimbursement_Date__c</fullName>
    <description>Data em que o embarcador foi ressarcido.</description>
    <label>Data do Ressarcimento</label>
    <type>Date</type>
</CustomField>