force-app/main/default/objects/LT_Loss_Claim__c/fields/LT_Reimbursement_Value__c.field-meta.xml
<CustomField>
    <fullName>LT_Reimbursement_Value__c</fullName>
    <description>Valor aprovado para ressarcir o embarcador.</description>
    <label>Valor de Ressarcimento</label>
    <type>Currency</type>
    <precision>12</precision>
    <scale>2</scale>
</CustomField>