force-app/main/default/objects/LT_Loss_Claim__c/fields/LT_Resolution_Notes__c.field-meta.xml
<CustomField>
    <fullName>LT_Resolution_Notes__c</fullName>
    <description>Justificativa de aprovacao ou indeferimento.</description>
    <label>Notas de Encerramento</label>
    <type>LongTextArea</type>
    <length>8000</length>
</CustomField>