force-app/main/default/objects/LT_Loss_Claim__c/fields/LT_Responsibility__c.field-meta.xml
<CustomField>
    <fullName>LT_Responsibility__c</fullName>
    <description>Parte responsavel apurada pelo extravio.</description>
    <label>Responsabilidade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Motorista</fullName>
            </value>
            <value>
                <fullName>Base</fullName>
            </value>
            <value>
                <fullName>Transporte (SC / MR / Coleta)</fullName>
            </value>
            <value>
                <fullName>Cliente / Embarcador</fullName>
            </value>
            <value>
                <fullName>Terceiro</fullName>
            </value>
            <value>
                <fullName>Sem Responsavel Definido</fullName>
                <default>true</default>
                <label>Sem Responsavel Definido</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>