force-app/main/default/objects/LT_Loss_Claim__c/fields/LT_Responsible_Base__c.field-meta.xml
<CustomField>
    <fullName>LT_Responsible_Base__c</fullName>
    <description>Base responsabilizada pelo extravio.</description>
    <label>Base Responsavel</label>
    <referenceTo>LT_Logistics_Unit__c</referenceTo>
    <relationshipLabel>Extravios</relationshipLabel>
    <relationshipName>LT_Loss_Claims</relationshipName>
    <type>Lookup</type>
</CustomField>