force-app/main/default/objects/LT_Loss_Claim__c/fields/LT_Responsible_Driver__c.field-meta.xml
<CustomField>
    <fullName>LT_Responsible_Driver__c</fullName>
    <description>Motorista responsabilizado pelo extravio.</description>
    <label>Motorista Responsavel</label>
    <referenceTo>LT_Driver__c</referenceTo>
    <relationshipLabel>Extravios</relationshipLabel>
    <relationshipName>LT_Loss_Claims</relationshipName>
    <type>Lookup</type>
</CustomField>