force-app/main/default/objects/LT_Loss_Claim__c/fields/LT_Shipment__c.field-meta.xml
<CustomField>
    <fullName>LT_Shipment__c</fullName>
    <description>Remessa extraviada.</description>
    <label>Remessa</label>
    <referenceTo>LT_Shipment__c</referenceTo>
    <relationshipLabel>Extravios</relationshipLabel>
    <relationshipName>LT_Loss_Claims</relationshipName>
    <required>true</required>
    <deleteConstraint>Restrict</deleteConstraint>
    <type>Lookup</type>
</CustomField>