force-app/main/default/objects/LT_Loss_Claim__c/fields/LT_Shipment_Key__c.field-meta.xml
<CustomField>
    <fullName>LT_Shipment_Key__c</fullName>
    <description>Chave tecnica que impede dois extravios para a mesma remessa.</description>
    <label>Chave da Remessa</label>
    <type>Text</type>
    <length>20</length>
    <unique>true</unique>
    <externalId>true</externalId>
</CustomField>