force-app/main/default/objects/LT_Loss_Claim__c/fields/LT_Status__c.field-meta.xml
<CustomField>
    <fullName>LT_Status__c</fullName>
    <description>Etapa de apuracao, aprovacao e ressarcimento.</description>
    <label>Status do Extravio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Em Apuracao</fullName>
                <default>true</default>
                <label>Em Apuracao</label>
            </value>
            <value>
                <fullName>Em Aprovacao</fullName>
            </value>
            <value>
                <fullName>Aprovado</fullName>
            </value>
            <value>
                <fullName>Ressarcido</fullName>
            </value>
            <value>
                <fullName>Indeferido</fullName>
            </value>
            <value>
                <fullName>Cancelado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>