force-app/main/default/objects/LT_Loss_Claim__c/validationRules/LT_Claim_Approved_Requires_Data.validationRule-meta.xml
<ValidationRule>
    <fullName>LT_Claim_Approved_Requires_Data</fullName>
    <active>true</active>
    <description>Extravio aprovado ou ressarcido exige aprovador e valor.</description>
    <errorConditionFormula>AND(OR(ISPICKVAL(LT_Status__c, "Aprovado"), ISPICKVAL(LT_Status__c, "Ressarcido")), OR(ISBLANK(LT_Approved_By__c), ISBLANK(LT_Reimbursement_Value__c)))</errorConditionFormula>
    <errorDisplayField>LT_Reimbursement_Value__c</errorDisplayField>
    <errorMessage>Informe o aprovador e o valor de ressarcimento.</errorMessage>
</ValidationRule>