force-app/main/default/objects/LT_Loss_Claim__c/validationRules/LT_Claim_Denied_Requires_Notes.validationRule-meta.xml
<ValidationRule>
    <fullName>LT_Claim_Denied_Requires_Notes</fullName>
    <active>true</active>
    <description>Extravio Indeferido exige justificativa.</description>
    <errorConditionFormula>AND(ISPICKVAL(LT_Status__c, "Indeferido"), ISBLANK(LT_Resolution_Notes__c))</errorConditionFormula>
    <errorDisplayField>LT_Resolution_Notes__c</errorDisplayField>
    <errorMessage>Justifique o indeferimento em Notas de Encerramento.</errorMessage>
</ValidationRule>