force-app/main/default/objects/LT_Loss_Claim__c/validationRules/LT_Claim_Driver_Resp_Requires_Driver.validationRule-meta.xml
<ValidationRule>
    <fullName>LT_Claim_Driver_Resp_Requires_Driver</fullName>
    <active>true</active>
    <description>Responsabilidade Motorista exige o motorista responsavel.</description>
    <errorConditionFormula>AND(ISPICKVAL(LT_Responsibility__c, "Motorista"), ISBLANK(LT_Responsible_Driver__c))</errorConditionFormula>
    <errorDisplayField>LT_Responsible_Driver__c</errorDisplayField>
    <errorMessage>Informe o Motorista Responsavel.</errorMessage>
</ValidationRule>