force-app/main/default/objects/LT_Loss_Claim__c/validationRules/LT_Claim_Reimbursed_Requires_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>LT_Claim_Reimbursed_Requires_Date</fullName>
    <active>true</active>
    <description>Extravio Ressarcido exige a data do ressarcimento.</description>
    <errorConditionFormula>AND(ISPICKVAL(LT_Status__c, "Ressarcido"), ISBLANK(LT_Reimbursement_Date__c))</errorConditionFormula>
    <errorDisplayField>LT_Reimbursement_Date__c</errorDisplayField>
    <errorMessage>Informe a Data do Ressarcimento.</errorMessage>
</ValidationRule>