force-app/main/default/objects/LT_Loss_Claim__c/validationRules/LT_Claim_Values_Not_Negative.validationRule-meta.xml
<ValidationRule>
    <fullName>LT_Claim_Values_Not_Negative</fullName>
    <active>true</active>
    <description>Valores do extravio nao podem ser negativos.</description>
    <errorConditionFormula>OR(LT_Reimbursement_Value__c &lt; 0, LT_Driver_Charge_Value__c &lt; 0, LT_Declared_Value__c &lt; 0)</errorConditionFormula>
    <errorMessage>Os valores do extravio nao podem ser negativos.</errorMessage>
</ValidationRule>