force-app/main/default/objects/LT_Loss_Claim__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>LT_Shipment__c</columns>
    <columns>LT_Loss_Reason__c</columns>
    <columns>LT_Responsibility__c</columns>
    <columns>LT_Status__c</columns>
    <columns>LT_Reimbursement_Value__c</columns>
    <columns>LT_Detected_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>