force-app/main/default/objects/LT_Loss_Claim__c/listViews/Em_Apuracao.listView-meta.xml
<ListView>
    <fullName>Em_Apuracao</fullName>
    <columns>NAME</columns>
    <columns>LT_Loss_Reason__c</columns>
    <columns>LT_Responsibility__c</columns>
    <columns>LT_Status__c</columns>
    <columns>LT_Declared_Value__c</columns>
    <columns>LT_Days_To_Resolve__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LT_Status__c</field>
        <operation>equals</operation>
        <value>Em Apuracao,Em Aprovacao</value>
    </filters>
    <label>Em Apuracao e Aprovacao</label>
</ListView>