force-app/main/default/objects/LT_Loss_Claim__c/listViews/Ressarcidos.listView-meta.xml
<ListView>
    <fullName>Ressarcidos</fullName>
    <columns>NAME</columns>
    <columns>LT_Shipment__c</columns>
    <columns>LT_Loss_Reason__c</columns>
    <columns>LT_Reimbursement_Value__c</columns>
    <columns>LT_Net_Company_Cost__c</columns>
    <columns>LT_Reimbursement_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LT_Status__c</field>
        <operation>equals</operation>
        <value>Ressarcido</value>
    </filters>
    <label>Ressarcidos</label>
</ListView>